# BGK2D_GPU_SYCL

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md
benchmark/: benchmark.py  bgk.input  plots.ipynb  results.csv  results_AMD.csv  results_AMD_SYCL.csv  results_INTEL.csv  results_INTEL_SYCL.csv  results_NVIDIA.csv  results_NVIDIA_SYCL.csv
fortran/RUN/: bgk2d.openacc.x
fortran/SRC/: Makefile
fortran/TEST/DrivenCavity/fortran/: bgk.perf
fortran/TEST/DrivenCavity/sycl/: bgk.perf
include/bgk2d/: file_manager.hh  get_mem.hh  input.hh  precision.hh  setup.hh  storage.hh  time.hh  utils.hh
include/bgk2d/sycl/: usm_buffer.hh
src/: alloca.cc  bcond_driven.cc  bgk2d.cc  boundaries.cc  build_bcond.cc  build_obs.cc  check_case.cc  col_MC.cc  collision.cc  diagno.cc  diagnostic.cc  hencol.cc  init.cc  initialize.cc  input.cc  kernel_utils.cc  outdat.cc  probe_visc.cc  prof_i.cc  prof_j.cc  restore_raw.cc  setup.cc  storage.cc  time.cc  varm.cc  vtk_obstacle.cc  vtk_om.cc  vtk_om_binary.cc  vtk_visc_binary.cc  vtk_xy.cc  vtk_xy_binary.cc  w_obs.cc
src/bcond/: bcond_channel.cc  bcond_driven.cc  bcond_inflow.cc  bcond_obs.cc  bcond_periodic.cc  boundaries.cc
